--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -11,3 +11,25 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
+  
+ruby:
+  title: Programming Ruby 1.9
+  description: 
+    Ruby is the fastest growing and most exciting dynamic language out 
+    there. If you need to get working programs delivered fast, you should add Ruby to your toolbox
+  image_url: ruby.png
+  price: 49.50
+  
+# == Schema Information
+#
+# Table name: products
+#
+#  id          :integer         not null, primary key
+#  title       :string(255)
+#  description :text
+#  image_url   :string(255)
+#  price       :decimal(, )
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+
