--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,12 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  product_id: 1
-  cart_id: 1
+  product: ruby
+  cart: one
+  quantity: 1
+  price: 49.50
 
 two:
-  product_id: 1
-  cart_id: 1
+  product: ruby
+  cart: one
+
 # == Schema Information
 #
 # Table name: line_items
