--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -3,6 +3,7 @@
 one:
   product: ruby
   cart: one
+  order: one
   quantity: 1
   price: 49.50
 
@@ -20,5 +21,7 @@ two:
 #  created_at :datetime
 #  updated_at :datetime
 #  quantity   :integer         default(1)
+#  price      :decimal(, )
+#  order_id   :integer
 #
 
